--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ li {
   display: none;
 }
 .hamburger {
-  font-size: 2.5rem;
+  font-size: 46rem;
   color: var(--white);
   cursor: pointer;
   margin-left: 2rem;
@@ -150,7 +150,9 @@ li {
   color: var(--black);
 }
 .navigation .nav-center .logo{
-  color: var(--white)
+  color: var(--white);
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 /* Media quires for mobile menu  */
@@ -441,6 +443,7 @@ li {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-color: green;
   height: 60vh;
   color: var(--white);
   display: flex;
@@ -571,4 +574,145 @@ select {
       margin-top: 1rem;
       margin-right: 12rem;
     }
+    .promo-text span {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+    .promo-text h1{
+      font-size: 3rem;
+    }
+    .promo-text p {
+      font-size: 1.2rem;
+    }
+}
+
+/* Collection page css */
+
+.collections{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 120rem;
+  margin: 5rem auto;
+  padding: 0 2rem;
+}
+.collection {
+  position: relative;
+  margin: 0 1rem;
+  width: 35rem;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 2px;
+  margin-bottom: 3rem;
+}
+.collection img{
+  width: 100%;
+  object-fit: cover;
+  transition: all 1s ease-in-out;
+}
+.collection-info{
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.collection-info h1{
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  border: 2px solid var(--green);
+  color: var(--white);
+  padding: 1rem 2rem;
+  border-radius: 50px;
+  transition: all .5s ease-in-out;
+}
+.collection-info h1:hover{
+  background-color: var(--green);
+}
+.collection:hover .scale{
+  transform: scale(1.2);
+}
+
+/* Media quires for collection section  */
+
+@media screen and (max-width: 820px) and (min-width: 600px) {
+  .collections {
+    max-width: 100%;
+    padding: rem;
+  }
+  .collection {
+    width: 40%;
+    margin-bottom: 3rem;
+  }
+}
+
+/* Login page css  */
+
+.contact{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem auto;
+}
+.contact-area h1{
+  font-size: 3rem;
+}
+.contact-area p{
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: .5rem;
+  margin-bottom: 2rem;
+}
+.contact-area a{
+  color: var(--green)
+}
+.email-container{
+  margin: 1rem 0;
+}
+.input-container label {
+  display: block;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: .5rem 0;
+}
+.input-container input{
+  width: 40rem;
+  padding: 1.2rem 1rem;
+  border: 1px solid #dfdfdf;
+  border-radius: 3px;
+  outline: none;
+  margin-bottom: 1rem;
+}
+.select-container input{
+  display: inline-block;
+}
+.select-container {
+  margin: 1rem 0;
+}
+.btn-container input{
+  padding: 1rem 2rem;
+  background-color: var(--green);
+  color: var(--white);
+  text-transform: capitalize;
+  margin-right: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  border-radius: 2px;
+}
+.btn-container input:hover {
+  background-color: var(--black);
+}
+
+/* Media quires for collection section  */
+
+@media screen and (max-width: 450px) {
+  .input-container input {
+    width: 30rem;
+  }
+  .contact{
+    margin: 1rem 0;
+  }
 }
